<resources>
    <string name="app_name">PunchApp</string>
    <string name="logName">请输入用户名</string>
    <string name="logPwd">请输入密码</string>
    <string name="todo">TODO</string>
    <string name="login">登录</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="haveNoAccount">新用户？</string>
    <string name="register">点击注册</string>
    <string name="picContent">选择头像</string>
    <string name="iconBtn">请选择头像</string>
    <string name="inputUsername">请输入用户名</string>
    <string name="inputPwd">请输入密码</string>
    <string name="checkPws">请确认密码</string>
    <string name="inputCode">请输入右侧图片中的验证码</string>
    <string name="registerBtn">注册</string>
    <string name="refreshCode">点击刷新</string>
    <string name="title_activity_test_drawer">testDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_student">studentActivity</string>
    <string name="title_activity_teacher">teacher</string>
    <string name="others">其他</string>
    <string name="menu_settings">设置</string>
    <string name="menu_myclass">我的班级</string>
    <string name="menu_punch">我的打卡</string>
    <string name="menu_myrecord">我的记录</string>
</resources>
